# python-rpmfusion

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  python-rpmfusion.spec  releaseutils.py  requirements.txt  setup.cfg  setup.py  tox.ini  zanata.xml
.tx/: config
fedora/: __init__.py  release.py
fedora/client/: __init__.py  baseclient.py  fas2.py  openidbaseclient.py  openidcclient.py  openidproxyclient.py  proxyclient.py
