[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-rpmfusion"
version = "1.2"
description = "Python modules for interacting with RPMFusion Services"
readme = "README.rst"
authors = [
  { name = "Toshio Kuratomi, Luke Macken, Ricky Elrod, Ralph Bean, Patrick Uiterwijk", email = "admin@rpmfusion.org" }
]
license = { text = "LGPLv2+" }
keywords = ["RPMFusion", "Python", "Webservices"]
dependencies = [
  "munch",
  "requests",
  "urllib3",
  "six >=1.4.0",
  "lockfile",
  "openidc-client"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
[project.urls]
homepage = "https://github.com/rpmfusion-infra/python-rpmfusion"
download = "https://pypi.python.org/pypi/python-rpmfusion"

[tool.setuptools.packages.find]
where = ["."]
include = ["fedora*"]

